modify emails + sendgrid ids

--- a/email-templates/communityInvite.html
+++ b/email-templates/communityInvite.html
@@ -8,8 +8,8 @@
       "template": "d-69b2e17b7a0f46048dcf4083ad4f9c48"
     },
     "production": {
-      "version": "baa91c47-4017-422c-a924-813a5724510f",
-      "template": "d-566d2a20ca9246108a55a4b4037b9e53"
+      "version": "b9dc4181-195b-419d-a927-1130aa5ac5a6",
+      "template": "d-5e909370a0534371a1916489d7b963fb"
     }
   }
   END_CONFIG
@@ -385,7 +385,7 @@
                 <!-- Body content -->
                 <tr>
                   <td class="content-cell">
-                    <p>{{sender.name}} has invited you to join the <a href="https://spectrum.chat/{{community.slug}}">{{community.name}}
+                    <p>{{sender.name}} has invited you to join the <a href="https://community.tryretool.com/{{community.slug}}">{{community.name}}
                         community</a> on Spectrum! Join now to get started.</p>
                   </td>
                 </tr>
@@ -427,7 +427,7 @@
 
                 <tr>
                   <td class="footer-cell">
-                    <a class="button" href="https://spectrum.chat/{{joinPath}}">Join {{community.name}}</a>
+                    <a class="button" href="https://community.tryretool.com/{{joinPath}}">Join {{community.name}}</a>
                   </td>
                 </tr>
               </table>
@@ -443,7 +443,7 @@
                 </li>
 
                 <li>
-                  <a href="https://spectrum.chat/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://spectrum.chat/spectrum/feature-requests">Request
+                  <a href="https://community.tryretool.com/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://community.tryretool.com/spectrum/feature-requests">Request
                     a feature</a>
                 </li>
               </ul>
