--- a/email-templates/validate-email.html
+++ b/email-templates/validate-email.html
@@ -8,8 +8,8 @@
       "template": "d-9fbb3cc969364050aac891c255d31209"
     },
     "production": {
-      "version": "28e03f9e-6bdc-4a31-baf6-cb74dde6d2fa",
-      "template": "d-8cd6c640e2d944c7a4bb8877722ff00f"
+      "version": "c95b0e9f-2f44-406f-8f97-5e57fcd189ea",
+      "template": "d-54707b1f7b4444f29d4f434c4f068b52"
     }
   }
   END_CONFIG
@@ -353,7 +353,7 @@
 
                 <tr>
                   <td class="footer-cell">
-                    <a class="button" href="https://spectrum.chat/api/email/validate?token={{validateToken}}">Confirm
+                    <a class="button" href="https://community.tryretool.com/api/email/validate?token={{validateToken}}">Confirm
                       my email address</a>
                   </td>
                 </tr>
@@ -365,7 +365,7 @@
           <tr>
             <td>
               <p>
-                You are receiving this email because you joined <a href="https://spectrum.chat">Spectrum</a>.
+                You are receiving this email because you joined <a href="https://community.tryretool.com">Spectrum</a>.
               </p>
 
               <ul>
@@ -374,7 +374,7 @@
                 </li>
 
                 <li>
-                  <a href="https://spectrum.chat/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://spectrum.chat/spectrum/feature-requests">Request
+                  <a href="https://community.tryretool.com/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://community.tryretool.com/spectrum/feature-requests">Request
                     a feature</a>
                 </li>
               </ul>
