--- a/email-templates/adminToxicContent.html
+++ b/email-templates/adminToxicContent.html
@@ -51,10 +51,10 @@
   </ul>
 
   <ul>
-    <li>Sender/creator: <a href="https://spectrum.chat/users/{{data.user.username}}">{{data.user.name}}</a></li>
-    <li>Thread: <a href="https://spectrum.chat/thread/{{data.thread.id}}">{{data.thread.content.title}}</a></li>
-    <li>Community: <a href="https://spectrum.chat/{{data.community.slug}}">{{data.community.name}}</a></li>
-    <li>Channel: <a href="https://spectrum.chat/{{data.community.slug}}/{{data.channel.slug}}">{{data.channel.name}}</a></li>
+    <li>Sender/creator: <a href="https://community.tryretool.com/users/{{data.user.username}}">{{data.user.name}}</a></li>
+    <li>Thread: <a href="https://community.tryretool.com/thread/{{data.thread.id}}">{{data.thread.content.title}}</a></li>
+    <li>Community: <a href="https://community.tryretool.com/{{data.community.slug}}">{{data.community.name}}</a></li>
+    <li>Channel: <a href="https://community.tryretool.com/{{data.community.slug}}/{{data.channel.slug}}">{{data.channel.name}}</a></li>
   </ul>
 </body>
 
