--- a/email-templates/mentionInMessage.html
+++ b/email-templates/mentionInMessage.html
@@ -8,8 +8,8 @@
       "template": "d-637189bc871744e9846694bff9f572ae"
     },
     "production": {
-      "version": "c378b694-b3a5-4712-bfcf-ddab45c7d998",
-      "template": "d-5ef46b71baee4c67bc46ab867e14d5bb"
+      "version": "d1f7f187-254b-45bb-ba82-d7c07bf19108",
+      "template": "d-077e3a46dfe7477187dddd06adb70e09"
     }
   }
   END_CONFIG
@@ -440,13 +440,13 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-community-header">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle" width="32">
-                          <a href="https://spectrum.chat/{{data.thread.community.slug}}" class="block">
+                          <a href="https://community.tryretool.com/{{data.thread.community.slug}}" class="block">
                             <img src={{data.thread.community.profilePhoto}} width="24" height="24" />
                           </a>
                         </td>
 
                         <td valign="middle">
-                          <a href="https://spectrum.chat/{{data.thread.community.slug}}" class="block">
+                          <a href="https://community.tryretool.com/{{data.thread.community.slug}}" class="block">
                             <p>{{data.thread.community.name}} ({{data.thread.channel.name}})</p>
                           </a>
                         </td>
@@ -456,7 +456,7 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-title">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle">
-                          <a href="https://spectrum.chat/thread/{{data.thread.id}}" class="block">
+                          <a href="https://community.tryretool.com/thread/{{data.thread.id}}" class="block">
                             <h3>{{data.thread.content.title}}</h3>
                           </a>
                         </td>
@@ -466,13 +466,13 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-byline">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle" width="32">
-                          <a href="https://spectrum.chat/users/{{data.thread.creator.username}}" class="block">
+                          <a href="https://community.tryretool.com/users/{{data.thread.creator.username}}" class="block">
                             <img src={{data.thread.creator.profilePhoto}} width="32" height="32" />
                           </a>
                         </td>
 
                         <td valign="middle">
-                          <a href="https://spectrum.chat/users/{{data.thread.creator.username}}" class="block">
+                          <a href="https://community.tryretool.com/users/{{data.thread.creator.username}}" class="block">
                             <p>{{data.message.sender.name}}</p>
                           </a>
                         </td>
@@ -486,7 +486,7 @@
                           <table cellpadding="0" cellspacing="0" class="reply-body">
                             <tr width="100%" cellpadding="0" cellspacing="0">
                               <td valign="middle">
-                                <a href="https://spectrum.chat/thread/{{data.thread.id}}" class="block">
+                                <a href="https://community.tryretool.com/thread/{{data.thread.id}}" class="block">
                                   <p>{{data.message.content.body}}</p>
                                 </a>
                               </td>
@@ -500,7 +500,7 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-actions">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle">
-                          <a href="https://spectrum.chat/thread/{{data.thread.id}}" class="button">
+                          <a href="https://community.tryretool.com/thread/{{data.thread.id}}" class="button">
                             View conversation
                           </a>
                         </td>
@@ -517,26 +517,26 @@
           <tr>
             <td>
               <p>
-                You are receiving this email because you joined <a href="https://spectrum.chat">Spectrum</a>. If you no
+                You are receiving this email because you joined <a href="https://community.tryretool.com">Spectrum</a>. If you no
                 longer want to receive emails like this, you can:
               </p>
 
               <ul>
                 {{#muteThreadToken}}
                 <li>
-                  <a href="https://spectrum.chat/api/email/unsubscribe?token={{.}}">Unsubscribe from this thread by
+                  <a href="https://community.tryretool.com/api/email/unsubscribe?token={{.}}">Unsubscribe from this thread by
                     {{../data.thread.creator.name}} (including future @mentions)</a>
                 </li>
                 {{/muteThreadToken}}
 
                 <li>
-                  <a href="https://spectrum.chat/api/email/unsubscribe?token={{unsubscribeToken}}">Unsubscribe from all
+                  <a href="https://community.tryretool.com/api/email/unsubscribe?token={{unsubscribeToken}}">Unsubscribe from all
                     @mention notifications</a>
                 </li>
 
                 {{#recipient.username}}
                 <li>
-                  <a href="https://spectrum.chat/users/{{.}}/settings">Manage your email preferences on Spectrum</a>
+                  <a href="https://community.tryretool.com/users/{{.}}/settings">Manage your email preferences on Spectrum</a>
                 </li>
                 {{/recipient.username}}
               </ul>
@@ -547,7 +547,7 @@
                 </li>
 
                 <li>
-                  <a href="https://spectrum.chat/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://spectrum.chat/spectrum/feature-requests">Request
+                  <a href="https://community.tryretool.com/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://community.tryretool.com/spectrum/feature-requests">Request
                     a feature</a>
                 </li>
               </ul>
