--- a/email-templates/newDirectMessage.html
+++ b/email-templates/newDirectMessage.html
@@ -8,8 +8,8 @@
       "template": "d-3e289af9efe748308be2dde1d3786c0d"
     },
     "production": {
-      "version": "676b57a5-0765-4306-b0e3-63cc77503e9f",
-      "template": "d-d959535dd2304830ad14e1850297f46d"
+      "version": "a17ce8da-7d57-4d85-825e-92bbb8b37aca",
+      "template": "d-a1fbb4abfcf143dcb229d45ee5d68c5a"
     }
   }
   END_CONFIG
@@ -415,7 +415,7 @@
                     <table class="attributes post" width="100%" cellpadding="0" cellspacing="0">
                       <tr>
                         <td>
-                          <a href="https://spectrum.chat/{{thread.path}}">
+                          <a href="https://community.tryretool.com/{{thread.path}}">
                             <h2 class="title">{{thread.content.title}}</h2>
                           </a>
                         </td>
@@ -426,7 +426,7 @@
                           <table>
                             <tr>
                               <td valign="top">
-                                <a href="https://spectrum.chat/{{thread.path}}">
+                                <a href="https://community.tryretool.com/{{thread.path}}">
                                   <img class="avatar" src="{{user.profilePhoto}}" />
                                 </a>
                               </td>
@@ -434,12 +434,12 @@
                                 <table>
                                   <tr>
                                     <td>
-                                      <a href="https://spectrum.chat/{{thread.path}}"><span class="name">{{user.name}}</span></a>
+                                      <a href="https://community.tryretool.com/{{thread.path}}"><span class="name">{{user.name}}</span></a>
                                     </td>
                                   </tr>
                                   <tr>
                                     <td>
-                                      <a href="https://spectrum.chat/{{thread.path}}">
+                                      <a href="https://community.tryretool.com/{{thread.path}}">
                                         <p class="reply">{{message.content.body}}</p>
                                       </a>
                                     </td>
@@ -453,7 +453,7 @@
 
                       <tr>
                         <td>
-                          <a data-pm-no-track class="feed button" href="https://spectrum.chat/{{thread.path}}">Go to
+                          <a data-pm-no-track class="feed button" href="https://community.tryretool.com/{{thread.path}}">Go to
                             conversation</a>
                         </td>
                       </tr>
@@ -474,25 +474,25 @@
           <tr>
             <td class="content-cell">
               <p class="sub">
-                You are receiving this email because you joined <a href="https://spectrum.chat">Spectrum</a>. If you no
+                You are receiving this email because you joined <a href="https://community.tryretool.com">Spectrum</a>. If you no
                 longer want to receive emails like this, you can:
               </p>
 
               <ul>
                 {{#muteThreadToken}}
                 <li>
-                  <a href="https://spectrum.chat/api/email/unsubscribe?token={{.}}">Unsubscribe from this conversation</a>
+                  <a href="https://community.tryretool.com/api/email/unsubscribe?token={{.}}">Unsubscribe from this conversation</a>
                 </li>
                 {{/muteThreadToken}}
 
                 <li>
-                  <a href="https://spectrum.chat/api/email/unsubscribe?token={{unsubscribeToken}}">Unsubscribe from all
+                  <a href="https://community.tryretool.com/api/email/unsubscribe?token={{unsubscribeToken}}">Unsubscribe from all
                     new direct message notification emails</a>
                 </li>
 
                 {{#username}}
                 <li>
-                  <a href="https://spectrum.chat/users/{{.}}/settings">Manage your email preferences on Spectrum</a>
+                  <a href="https://community.tryretool.com/users/{{.}}/settings">Manage your email preferences on Spectrum</a>
                 </li>
                 {{/username}}
               </ul>
@@ -503,7 +503,7 @@
                 </li>
 
                 <li>
-                  <a href="https://spectrum.chat/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://spectrum.chat/spectrum/feature-requests">Request
+                  <a href="https://community.tryretool.com/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://community.tryretool.com/spectrum/feature-requests">Request
                     a feature</a>
                 </li>
               </ul>
