--- a/email-templates/newThreadNotification.html
+++ b/email-templates/newThreadNotification.html
@@ -8,8 +8,8 @@
       "template": "d-084c11332981443388ebdae05d0a2ff4"
     },
     "production": {
-      "version": "3782dbbd-741c-416f-9b27-fa9eac9d3f99",
-      "template": "d-2809d28ff1cc4d89a503e04de3388411"
+      "version": "3627175f-23a7-4d33-aadd-a754a04559f8",
+      "template": "d-1e4ff6df58c244d8a1da610629bc63a1"
     }
   }
   END_CONFIG
@@ -419,13 +419,13 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-community-header">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle" width="32">
-                          <a href="https://spectrum.chat/{{data.thread.community.slug}}" class="block">
+                          <a href="https://community.tryretool.com/{{data.thread.community.slug}}" class="block">
                             <img src={{data.thread.community.profilePhoto}} width="24" height="24" />
                           </a>
                         </td>
 
                         <td valign="middle">
-                          <a href="https://spectrum.chat/{{data.thread.community.slug}}" class="block">
+                          <a href="https://community.tryretool.com/{{data.thread.community.slug}}" class="block">
                             <p>Posted in {{data.thread.community.name}} ({{data.thread.channel.name}})</p>
                           </a>
                         </td>
@@ -435,13 +435,13 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-byline">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle" width="32">
-                          <a href="https://spectrum.chat/users/{{data.thread.creator.username}}" class="block">
+                          <a href="https://community.tryretool.com/users/{{data.thread.creator.username}}" class="block">
                             <img src={{data.thread.creator.profilePhoto}} width="32" height="32" />
                           </a>
                         </td>
 
                         <td valign="middle">
-                          <a href="https://spectrum.chat/users/{{data.thread.creator.username}}" class="block">
+                          <a href="https://community.tryretool.com/users/{{data.thread.creator.username}}" class="block">
                             <p>By {{data.thread.creator.name}}</p>
                           </a>
                         </td>
@@ -451,7 +451,7 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-title">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle">
-                          <a href="https://spectrum.chat/thread/{{data.thread.id}}" class="block">
+                          <a href="https://community.tryretool.com/thread/{{data.thread.id}}" class="block">
                             <h3>{{data.thread.content.title}}</h3>
                           </a>
                         </td>
@@ -463,7 +463,7 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-body">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle">
-                          <a href="https://spectrum.chat/thread/{{../../id}}" class="block">
+                          <a href="https://community.tryretool.com/thread/{{../../id}}" class="block">
                             <p>{{.}}</p>
                           </a>
                         </td>
@@ -474,7 +474,7 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-actions">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle">
-                          <a href="https://spectrum.chat/thread/{{data.thread.id}}" class="button">
+                          <a href="https://community.tryretool.com/thread/{{data.thread.id}}" class="button">
                             {{data.primaryActionLabel}}
                           </a>
                         </td>
@@ -491,33 +491,33 @@
           <tr>
             <td>
               <p>
-                You are receiving this email because you joined <a href="https://spectrum.chat">Spectrum</a>. If you no
+                You are receiving this email because you joined <a href="https://community.tryretool.com">Spectrum</a>. If you no
                 longer want to receive emails like this, you can:
               </p>
 
               <ul>
                 {{#muteChannelToken}}
                 <li>
-                  <a href="https://spectrum.chat/api/email/unsubscribe?token={{.}}">Unsubscribe from the
+                  <a href="https://community.tryretool.com/api/email/unsubscribe?token={{.}}">Unsubscribe from the
                     {{../data.thread.channel.name}} channel in {{../data.thread.community.name}}</a>
                 </li>
                 {{/muteChannelToken}}
 
                 {{#muteCommunityToken}}
                 <li>
-                  <a href="https://spectrum.chat/api/email/unsubscribe?token={{.}}">Unsubscribe from the
+                  <a href="https://community.tryretool.com/api/email/unsubscribe?token={{.}}">Unsubscribe from the
                     {{../data.thread.community.name}} community</a>
                 </li>
                 {{/muteCommunityToken}}
 
                 <li>
-                  <a href="https://spectrum.chat/api/email/unsubscribe?token={{unsubscribeToken}}">Unsubscribe from all
+                  <a href="https://community.tryretool.com/api/email/unsubscribe?token={{unsubscribeToken}}">Unsubscribe from all
                     new thread notification emails</a>
                 </li>
 
                 {{#recipient.username}}
                 <li>
-                  <a href="https://spectrum.chat/users/{{.}}/settings">Manage your email preferences on Spectrum</a>
+                  <a href="https://community.tryretool.com/users/{{.}}/settings">Manage your email preferences on Spectrum</a>
                 </li>
                 {{/recipient.username}}
               </ul>
@@ -528,7 +528,7 @@
                 </li>
 
                 <li>
-                  <a href="https://spectrum.chat/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://spectrum.chat/spectrum/feature-requests">Request
+                  <a href="https://community.tryretool.com/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://community.tryretool.com/spectrum/feature-requests">Request
                     a feature</a>
                 </li>
               </ul>
