--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel='mask-icon' href='%PUBLIC_URL%/img/pinned-tab.svg' color='#171A21'>
     <meta name="theme-color" content="#171A21">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="canonical" href="https://retool.com/community/" />
     <!-- Open Graph -->
     <meta property="og:site_name" content="Spectrum">
     <!-- Twitter -->
