--- a/email-templates/adminUserSpammingThreadsNotification.html
+++ b/email-templates/adminUserSpammingThreadsNotification.html
@@ -51,7 +51,7 @@
 
 
   <p><strong>User:</strong></p>
-  <p><a href="https://tryretool.com/community/users/{{data.user.username}}">{{data.user.name}}</a></p>
+  <p><a href="https://retool.com/community/users/{{data.user.username}}">{{data.user.name}}</a></p>
 
   <br />
   <br />
@@ -65,14 +65,14 @@
 
   <p><strong>Previous threads published:</strong></p>
   {{#each data.threads}}
-  <p><a href="https://tryretool.com/community/thread/{{id}}">{{content.title}}</a></p>
+  <p><a href="https://retool.com/community/thread/{{id}}">{{content.title}}</a></p>
   {{/each}}
 
   <br />
   <br />
 
   <p><strong>Publishing in </strong></p>
-  <a href="https://tryretool.com/community/{{data.community.slug}}">{{data.community.name}}</a> / <a href="https://tryretool.com/community/{{data.community.slug}}/{{data.channel.slug}}">{{data.channel.name}}</a>
+  <a href="https://retool.com/community/{{data.community.slug}}">{{data.community.name}}</a> / <a href="https://retool.com/community/{{data.community.slug}}/{{data.channel.slug}}">{{data.channel.name}}</a>
 </body>
 
 </html>
