--- a/email-templates/validate-email.html
+++ b/email-templates/validate-email.html
@@ -353,7 +353,7 @@
 
                 <tr>
                   <td class="footer-cell">
-                    <a class="button" href="https://tryretool.com/community/api/email/validate?token={{validateToken}}">Confirm
+                    <a class="button" href="https://retool.com/community/api/email/validate?token={{validateToken}}">Confirm
                       my email address</a>
                   </td>
                 </tr>
@@ -365,7 +365,7 @@
           <tr>
             <td>
               <p>
-                You are receiving this email because you joined <a href="https://tryretool.com/community">Spectrum</a>.
+                You are receiving this email because you joined <a href="https://retool.com/community">Spectrum</a>.
               </p>
 
               <ul>
@@ -374,7 +374,7 @@
                 </li>
 
                 <li>
-                  <a href="https://tryretool.com/community/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://tryretool.com/community/spectrum/feature-requests">Request
+                  <a href="https://retool.com/community/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://retool.com/community/spectrum/feature-requests">Request
                     a feature</a>
                 </li>
               </ul>
