--- a/email-templates/adminSlackImportProcessed.html
+++ b/email-templates/adminSlackImportProcessed.html
@@ -42,14 +42,14 @@
 
   <p><strong>New slack import:</strong></p>
   <ul>
-    <li>Community: <a href="https://tryretool.com/community/{{community.slug}}">{{data.community.name}}</a></li>
+    <li>Community: <a href="https://retool.com/community/{{community.slug}}">{{data.community.name}}</a></li>
     <li>{{data.invitedCount}} members invited</li>
     <li>Slack team name: {{data.teamName}}</li>
   </ul>
 
   <p><strong>Community owner:</strong></p>
   <ul>
-    <li><a href="https://tryretool.com/community/users/{{data.user.username}}">{{data.user.name}}</a></li>
+    <li><a href="https://retool.com/community/users/{{data.user.username}}">{{data.user.name}}</a></li>
     <li>About: {{data.user.description}}</li>
     <li>Joined Spectrum: {{data.user.createdAt}}</li>
     <li>Email: <a href="mailto:{{user.email}}">{{data.user.email}}</a></li>
