--- a/email-templates/adminToxicContent.html
+++ b/email-templates/adminToxicContent.html
@@ -51,10 +51,10 @@
   </ul>
 
   <ul>
-    <li>Sender/creator: <a href="https://tryretool.com/community/users/{{data.user.username}}">{{data.user.name}}</a></li>
-    <li>Thread: <a href="https://tryretool.com/community/thread/{{data.thread.id}}">{{data.thread.content.title}}</a></li>
-    <li>Community: <a href="https://tryretool.com/community/{{data.community.slug}}">{{data.community.name}}</a></li>
-    <li>Channel: <a href="https://tryretool.com/community/{{data.community.slug}}/{{data.channel.slug}}">{{data.channel.name}}</a></li>
+    <li>Sender/creator: <a href="https://retool.com/community/users/{{data.user.username}}">{{data.user.name}}</a></li>
+    <li>Thread: <a href="https://retool.com/community/thread/{{data.thread.id}}">{{data.thread.content.title}}</a></li>
+    <li>Community: <a href="https://retool.com/community/{{data.community.slug}}">{{data.community.name}}</a></li>
+    <li>Channel: <a href="https://retool.com/community/{{data.community.slug}}/{{data.channel.slug}}">{{data.channel.name}}</a></li>
   </ul>
 </body>
 
