--- a/email-templates/adminUserReported.html
+++ b/email-templates/adminUserReported.html
@@ -43,9 +43,9 @@
   <p>{{reportedUser.username}} was reported by {{reportingUser.username}} for reason: "{{reason}}"</p>
 
   <ul>
-    <li>User being reported: <a href="https://tryretool.com/community/users/{{reportedUser.username}}">{{reportedUser.name}}
+    <li>User being reported: <a href="https://retool.com/community/users/{{reportedUser.username}}">{{reportedUser.name}}
         (@{{reportedUser.username}})</a></li>
-    <li>Reported by: <a href="https://tryretool.com/community/users/{{reportingUser.username}}">{{reportingUser.name}}
+    <li>Reported by: <a href="https://retool.com/community/users/{{reportingUser.username}}">{{reportingUser.name}}
         (@{{reportingUser.username}})</a></li>
   </ul>
 </body>
