--- a/email-templates/newUserWelcome.html
+++ b/email-templates/newUserWelcome.html
@@ -343,11 +343,11 @@
                     <p>Welcome to Spectrum!</p>
                     <p>Spectrum is a platform built to keep you connected with the communities you care about, all in
                       one simple feed.</p>
-                    <p>If you want to discover communities, head on over to our <a href="https://tryretool.com/community/explore?utm_source=email&utm_campaign=welcome-email">Explore
+                    <p>If you want to discover communities, head on over to our <a href="https://retool.com/community/explore?utm_source=email&utm_campaign=welcome-email">Explore
                         page</a> to see what's popular and new.</p>
-                    <p>We're also posting regularly in <a href="https://tryretool.com/community/spectrum?utm_source=email&utm_campaign=welcome-email">our
-                        own community</a>, which is a great place to <a href="https://tryretool.com/community/spectrum/feature-requests?utm_source=email&utm_campaign=welcome-email">request
-                        new features</a> or <a href="https://tryretool.com/community/spectrum/hugs-n-bugs?utm_source=email&utm_campaign=welcome-email">report
+                    <p>We're also posting regularly in <a href="https://retool.com/community/spectrum?utm_source=email&utm_campaign=welcome-email">our
+                        own community</a>, which is a great place to <a href="https://retool.com/community/spectrum/feature-requests?utm_source=email&utm_campaign=welcome-email">request
+                        new features</a> or <a href="https://retool.com/community/spectrum/hugs-n-bugs?utm_source=email&utm_campaign=welcome-email">report
                         any bugs you might find.</a></p>
                     <p>In the meantime, we're looking forward to seeing you around!</p>
                   </td>
@@ -361,7 +361,7 @@
 
                 <tr>
                   <td class="footer-cell">
-                    <a class="button" href="https://tryretool.com/community?utm_source=email&utm_campaign=welcome-email">Go to my
+                    <a class="button" href="https://retool.com/community?utm_source=email&utm_campaign=welcome-email">Go to my
                       dashboard</a>
                   </td>
                 </tr>
@@ -373,7 +373,7 @@
           <tr>
             <td>
               <p>
-                You are receiving this email because you joined <a href="https://tryretool.com/community">Spectrum</a>.
+                You are receiving this email because you joined <a href="https://retool.com/community">Spectrum</a>.
               </p>
               <ul>
                 <li>
@@ -381,7 +381,7 @@
                 </li>
 
                 <li>
-                  <a href="https://tryretool.com/community/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://tryretool.com/community/spectrum/feature-requests">Request
+                  <a href="https://retool.com/community/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://retool.com/community/spectrum/feature-requests">Request
                     a feature</a>
                 </li>
               </ul>
