--- a/email-templates/privateChannelRequestSent.html
+++ b/email-templates/privateChannelRequestSent.html
@@ -378,9 +378,9 @@
                 <!-- Body content -->
                 <tr>
                   <td class="content-cell">
-                    <p><a href="https://tryretool.com/community/users/{{data.user.username}}">{{data.user.name}}</a> has
-                      requested to join the <a href="https://tryretool.com/community/{{data.community.slug}}/{{data.channel.slug}}">{{data.channel.name}}
-                        channel</a> in the <a href="https://tryretool.com/community/{{data.community.slug}}">{{data.community.name}}
+                    <p><a href="https://retool.com/community/users/{{data.user.username}}">{{data.user.name}}</a> has
+                      requested to join the <a href="https://retool.com/community/{{data.community.slug}}/{{data.channel.slug}}">{{data.channel.name}}
+                        channel</a> in the <a href="https://retool.com/community/{{data.community.slug}}">{{data.community.name}}
                         community</a>. You can approve or block this request in your channel settings.</p>
                   </td>
                 </tr>
@@ -390,7 +390,7 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-actions multi">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle">
-                          <a href="https://tryretool.com/community/{{data.community.slug}}/{{data.channel.slug}}/settings" class="button">
+                          <a href="https://retool.com/community/{{data.community.slug}}/{{data.channel.slug}}/settings" class="button">
                             Go to channel settings
                           </a>
                         </td>
@@ -407,16 +407,16 @@
           <tr>
             <td>
               <p>
-                You are receiving this email because you joined <a href="https://tryretool.com/community">Spectrum</a>.
+                You are receiving this email because you joined <a href="https://retool.com/community">Spectrum</a>.
               </p>
 
               <ul>
                 <li>
-                  <a href="https://tryretool.com/community/{{data.community.slug}}/{{data.channel.slug}}/settings">View settings
+                  <a href="https://retool.com/community/{{data.community.slug}}/{{data.channel.slug}}/settings">View settings
                     for the {{data.channel.name}} channel</a>
                 </li>
                 <li>
-                  <a href="https://tryretool.com/community/{{data.community.slug}}/settings">View settings for the
+                  <a href="https://retool.com/community/{{data.community.slug}}/settings">View settings for the
                     {{data.community.name}} community</a>
                 </li>
               </ul>
@@ -427,7 +427,7 @@
                 </li>
 
                 <li>
-                  <a href="https://tryretool.com/community/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://tryretool.com/community/spectrum/feature-requests">Request
+                  <a href="https://retool.com/community/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://retool.com/community/spectrum/feature-requests">Request
                     a feature</a>
                 </li>
               </ul>
