--- a/email-templates/privateCommunityRequestApproved.html
+++ b/email-templates/privateCommunityRequestApproved.html
@@ -377,7 +377,7 @@
                 <!-- Body content -->
                 <tr>
                   <td class="content-cell">
-                    <p>Your request to join the <a href="https://tryretool.com/community/{{data.community.slug}}">{{data.community.name}}
+                    <p>Your request to join the <a href="https://retool.com/community/{{data.community.slug}}">{{data.community.name}}
                         community</a> was approved! You can now join any conversations happening in this community.</p>
                   </td>
                 </tr>
@@ -387,7 +387,7 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-actions multi">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle">
-                          <a href="https://tryretool.com/community/{{data.community.slug}}" class="button">
+                          <a href="https://retool.com/community/{{data.community.slug}}" class="button">
                             View Community
                           </a>
                         </td>
@@ -404,7 +404,7 @@
           <tr>
             <td>
               <p>
-                You are receiving this email because you joined <a href="https://tryretool.com/community">Spectrum</a>.
+                You are receiving this email because you joined <a href="https://retool.com/community">Spectrum</a>.
               </p>
 
               <ul>
@@ -413,7 +413,7 @@
                 </li>
 
                 <li>
-                  <a href="https://tryretool.com/community/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://tryretool.com/community/spectrum/feature-requests">Request
+                  <a href="https://retool.com/community/spectrum/hugs-n-bugs">Report bugs</a> · <a href="https://retool.com/community/spectrum/feature-requests">Request
                     a feature</a>
                 </li>
               </ul>
