--- a/email-templates/weeklyDigest.html
+++ b/email-templates/weeklyDigest.html
@@ -424,7 +424,7 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-title">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle">
-                          <a href="https://tryretool.com/community/thread/{{id}}" class="block">
+                          <a href="https://retool.com/community/thread/{{id}}" class="block">
                             <h3>{{content.title}}</h3>
                           </a>
                         </td>
@@ -434,7 +434,7 @@
                     <table width="100%" cellpadding="0" cellspacing="0" class="thread-community-header">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle" width="32">
-                          <a href="https://tryretool.com/community/{{community.slug}}" class="block" style="height:32px">
+                          <a href="https://retool.com/community/{{community.slug}}" class="block" style="height:32px">
                             <img src={{community.profilePhoto}} width="32" height="32" />
                           </a>
                         </td>
@@ -442,11 +442,11 @@
                         <td valign="middle">
                           <p>
                             Posted in <a
-                              href="https://tryretool.com/community/{{community.slug}}">{{community.name}}</a>&nbsp;·&nbsp;<a
-                              href="https://tryretool.com/community/{{community.slug}}/{{channel.slug}}">{{channel.name}}</a>
+                              href="https://retool.com/community/{{community.slug}}">{{community.name}}</a>&nbsp;·&nbsp;<a
+                              href="https://retool.com/community/{{community.slug}}/{{channel.slug}}">{{channel.name}}</a>
                           </p>
                           <p>
-                            <a href="https://tryretool.com/community/{{community.slug}}" class="block a-p">
+                            <a href="https://retool.com/community/{{community.slug}}" class="block a-p">
                               {{{messageCountString}}}
                             </a>
                           </p>
@@ -467,7 +467,7 @@
                 </tr>
                 <tr>
                   <td>
-                    <a class="button" href="https://tryretool.com/community">See more conversations</a>
+                    <a class="button" href="https://retool.com/community">See more conversations</a>
                   </td>
                 </tr>
                 {{/data.hasOverflowThreads}}
@@ -493,16 +493,16 @@
                       class="thread-community-header suggested-community">
                       <tr width="100%" cellpadding="0" cellspacing="0">
                         <td valign="middle" width="32">
-                          <a href="https://tryretool.com/community/{{slug}}" class="block">
+                          <a href="https://retool.com/community/{{slug}}" class="block">
                             <img src={{profilePhoto}} width="44" height="44" />
                           </a>
                         </td>
 
                         <td valign="middle">
-                          <a href="https://tryretool.com/community/{{slug}}" class="block">
+                          <a href="https://retool.com/community/{{slug}}" class="block">
                             <h2 class="suggested-community-title">{{name}}</h2>
                           </a>
-                          <a href="https://tryretool.com/community/{{slug}}" class="block">
+                          <a href="https://retool.com/community/{{slug}}" class="block">
                             <p>
                               {{description}}
                             </p>
@@ -524,7 +524,7 @@
 
                 <tr>
                   <td>
-                    <a class="button" href="https://tryretool.com/community/">Go to my feed</a>
+                    <a class="button" href="https://retool.com/community/">Go to my feed</a>
                   </td>
                 </tr>
               </table>
@@ -536,19 +536,19 @@
           <tr>
             <td>
               <p>
-                You are receiving this email because you joined <a href="https://tryretool.com/community">Spectrum</a>. If you no
+                You are receiving this email because you joined <a href="https://retool.com/community">Spectrum</a>. If you no
                 longer want to receive emails like this, you can:
               </p>
 
               <ul>
                 <li>
-                  <a href="https://tryretool.com/community/api/email/unsubscribe?token={{unsubscribeToken}}">Unsubscribe from
+                  <a href="https://retool.com/community/api/email/unsubscribe?token={{unsubscribeToken}}">Unsubscribe from
                     {{data.timeframe.subject}} digests</a>
                 </li>
 
                 {{#data.username}}
                 <li>
-                  <a href="https://tryretool.com/community/users/{{.}}/settings">Manage your email preferences on Spectrum</a>
+                  <a href="https://retool.com/community/users/{{.}}/settings">Manage your email preferences on Spectrum</a>
                 </li>
                 {{/data.username}}
               </ul>
@@ -559,8 +559,8 @@
                 </li>
 
                 <li>
-                  <a href="https://tryretool.com/community/spectrum/hugs-n-bugs">Report bugs</a> · <a
-                    href="https://tryretool.com/community/spectrum/feature-requests">Request
+                  <a href="https://retool.com/community/spectrum/hugs-n-bugs">Report bugs</a> · <a
+                    href="https://retool.com/community/spectrum/feature-requests">Request
                     a feature</a>
                 </li>
               </ul>
